welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:6: error: not found: value m
def extrema(nums:Array[Int]): Int = {m-m2} 
                                     ^extrema:6: error: not found: value m2
def extrema(nums:Array[Int]): Int = {m-m2} 
                                       ^