welcome.lessons.welcome.array.search.Extrema.scala.code
def maxminValue(nums:Array[Int]): (Int,Int) = {
  var m = nums(0)
  var m2 = nums(0)
  for (i<- 0 to nums.length -1) {m=Math.max(m,nums(i));m2=Math.min(m2,nums(i))}
  return (m,m2)}
def extrema(nums:Array[Int]): Int = {m-m2}